--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404 Page not found - LoveIt</title><meta name="Description" content="This is my cool site"><meta property="og:title" content="404 Page not found" />
+        <title>404 Page not found - Shiva&#39;s Blog</title><meta name="Description" content="This is my cool site"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="This is my cool site" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/404.html" /><meta property="og:site_name" content="My cool site" />
@@ -20,7 +20,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="LoveIt">Shiva&#39;s Blog</a>
+            <a href="/" title="Shiva&#39;s Blog">Shiva&#39;s Blog</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><span class="menu-item search" id="search-desktop">
@@ -44,7 +44,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="LoveIt">Shiva&#39;s Blog</a>
+                <a href="/" title="Shiva&#39;s Blog">Shiva&#39;s Blog</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
