--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <a href="/" title="Shiva&#39;s Blog">Shiva&#39;s Blog</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search works on homepage" id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -77,7 +77,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/tags/" title="">Tags</a><a class="menu-item" href="/categories/" title="">Categories</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a></div>
     </div>
@@ -87,14 +87,14 @@
     <div class="search-dropdown mobile">
         <div id="search-dropdown-mobile"></div>
     </div><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/posts/" title="Posts"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp"
         data-srcset="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 1.5x, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 2x"
         data-sizes="auto"
         alt="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp"
-        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></div><h1 class="home-title">Shiva's Blog</h1><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="/" rel=" me"></a>
+        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="/" rel=" me"></a>
 <a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw" aria-hidden="true"></i></a>
 <a href="https://linkedin.com/in//" title="LinkedIn" target="_blank" rel="noopener noreffer me"><i class="fab fa-linkedin fa-fw" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com//" title="Instagram" target="_blank" rel="noopener noreffer me"><i class="fab fa-instagram fa-fw" aria-hidden="true"></i></a>
