--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,20 @@
         <title>SHIVA.DEV</title><meta name="Description" content="Shiva&#39;s Tech Blog"><meta property="og:title" content="SHIVA.DEV" />
 <meta property="og:description" content="Shiva&#39;s Tech Blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/" /><meta property="og:site_name" content="www.shiva.dev" />
+<meta property="og:url" content="https://shiva.dev/" /><meta property="og:site_name" content="www.shiva.dev" />
 
 <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="SHIVA.DEV"/>
 <meta name="twitter:description" content="Shiva&#39;s Tech Blog"/>
+<meta name="twitter:site" content="@/"/>
 <meta name="application-name" content="Shiva&#39;s Tech Blog">
 <meta name="apple-mobile-web-app-title" content="Shiva&#39;s Tech Blog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="SHIVA.DEV">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://shiva.dev/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="SHIVA.DEV">
     <link rel="feed" href="/index.xml" type="application/rss+xml" title="SHIVA.DEV"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "\/","inLanguage": "en","author": {
+        "url": "https:\/\/shiva.dev\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "Shiva"
             },"description": "Shiva's Tech Blog","name": "SHIVA.DEV"
@@ -94,12 +95,9 @@
         data-srcset="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 1.5x, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 2x"
         data-sizes="auto"
         alt="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp"
-        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-3" class="typeit"></div></div><div class="links"><a href="/" rel=" me"></a>
-<a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw" aria-hidden="true"></i></a>
-<a href="https://linkedin.com/in//" title="LinkedIn" target="_blank" rel="noopener noreffer me"><i class="fab fa-linkedin fa-fw" aria-hidden="true"></i></a>
-<a href="https://www.instagram.com//" title="Instagram" target="_blank" rel="noopener noreffer me"><i class="fab fa-instagram fa-fw" aria-hidden="true"></i></a>
-<a href="https://www.reddit.com/user//" title="Reddit" target="_blank" rel="noopener noreffer me"><i class="fab fa-reddit fa-fw" aria-hidden="true"></i></a>
-<a href="https://stackoverflow.com/users//" title="Stack Overflow" target="_blank" rel="noopener noreffer me"><i class="fab fa-stack-overflow fa-fw" aria-hidden="true"></i></a>
+        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-3" class="typeit"></div></div><div class="links"><a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw" aria-hidden="true"></i></a>
+<a href="https://twitter.com//" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw" aria-hidden="true"></i></a>
+<a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fab fa-gitlab fa-fw" aria-hidden="true"></i></a>
 <a href="https://dev.to/shiva_" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
 </div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><h1 class="single-title" itemprop="name headline">
@@ -128,5 +126,5 @@ For instance, if we start with a principal amount of $100 and an annual rate of 
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment fa-fw" aria-hidden="true"></i>
             </a>
-        </div><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/autocomplete.js@0.38.1/dist/autocomplete.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/algoliasearch@4.13.0/dist/algoliasearch-lite.umd.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.1/lazysizes.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sharer.js@0.5.1/sharer.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typeit@8.5.4/dist/index.umd.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"data":{"id-1":"SHIVA.DEV","id-2":"SHIVA.DEV","id-3":"\u003ccode\u003e git push origin www.shiva.dev\u003c/code\u003e"},"search":{"algoliaAppID":"86WT0W3RY2","algoliaIndex":"shivasblog","algoliaSearchKey":"66427dfa09802bd19793a66c81fd82f9","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"],"id-2":["id-2"],"id-3":["id-3"]},"duration":-1,"speed":100}};</script><script type="text/javascript" src="/js/theme.min.js"></script></body>
+        </div><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/autocomplete.js@0.38.1/dist/autocomplete.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/algoliasearch@4.13.0/dist/algoliasearch-lite.umd.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.1/lazysizes.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sharer.js@0.5.1/sharer.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typeit@8.5.4/dist/index.umd.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"data":{"id-1":"SHIVA.DEV","id-2":"SHIVA.DEV","id-3":"\u003ccode\u003e git push origin www.shiva.dev\u003c/code\u003e"},"search":{"algoliaAppID":"CW3TBRQ1T6","algoliaIndex":"shiva.dev","algoliaSearchKey":"1732c84c65fb18888d34b872d243899e","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"],"id-2":["id-2"],"id-3":["id-3"]},"duration":-1,"speed":100}};</script><script type="text/javascript" src="/js/theme.min.js"></script></body>
 </html>
