--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
         data-srcset="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 1.5x, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 2x"
         data-sizes="auto"
         alt="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp"
-        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-3" class="typeit"></div></div><div class="links"><a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw" aria-hidden="true"></i></a>
+        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-3" class="typeit"></div></div><div class="links"><a href="https://github.com/shlva" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw" aria-hidden="true"></i></a>
 <a href="https://twitter.com//" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw" aria-hidden="true"></i></a>
 <a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fab fa-gitlab fa-fw" aria-hidden="true"></i></a>
 <a href="https://dev.to/shiva_" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
