updated gitignore, config and removed _redirect

--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404 Page not found - SHIVA.DEV</title><meta name="Description" content="Shiva&#39;s Tech Blog"><meta property="og:title" content="404 Page not found" />
+        <title>404 Page not found - Shiva Inampudi</title><meta name="Description" content="Shiva&#39;s Tech Blog"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Shiva&#39;s Tech Blog" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shiva.dev/404.html" /><meta property="og:site_name" content="www.shiva.dev" />
@@ -21,7 +21,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="SHIVA.DEV"><span id="id-1" class="typeit"></span></a>
+            <a href="/" title="Shiva Inampudi"><span id="id-1" class="typeit"></span></a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -45,7 +45,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="SHIVA.DEV"><span id="id-2" class="typeit"></span></a>
+                <a href="/" title="Shiva Inampudi"><span id="id-2" class="typeit"></span></a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -91,7 +91,7 @@
     </script></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.121.1">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
-                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2019 - 2024</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://shiva.dev" target="_blank">Shiva</a></span></div>
+                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2019 - 2024</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://shiva.dev" target="_blank">Shiva Inampudi</a></span></div>
         </div>
     </footer></div>
 
