updated site title and description

--- a/public/404.html
+++ b/public/404.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404 Page not found - Shiva Inampudi</title><meta name="Description" content="Shiva&#39;s Tech Blog"><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Shiva&#39;s Tech Blog" />
+        <title>404 Page not found - SHIVA.DEV</title><meta name="Description" content="Tech Odyssey of Shiva Inampudi"><meta property="og:title" content="404 Page not found" />
+<meta property="og:description" content="Tech Odyssey of Shiva Inampudi" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shiva.dev/404.html" /><meta property="og:site_name" content="www.shiva.dev" />
 
 <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Shiva&#39;s Tech Blog"/>
+<meta name="twitter:description" content="Tech Odyssey of Shiva Inampudi"/>
 <meta name="twitter:site" content="@/"/>
 <meta name="application-name" content="Shiva&#39;s Tech Blog">
 <meta name="apple-mobile-web-app-title" content="Shiva&#39;s Tech Blog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
@@ -21,7 +21,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Shiva Inampudi"><span id="id-1" class="typeit"></span></a>
+            <a href="/" title="SHIVA.DEV"><span id="id-1" class="typeit"></span></a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -45,7 +45,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Shiva Inampudi"><span id="id-2" class="typeit"></span></a>
+                <a href="/" title="SHIVA.DEV"><span id="id-2" class="typeit"></span></a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
