added email social

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,7 @@
 <a href="https://x.com/okkaduX" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
 <a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-gitlab" aria-hidden="true"></i></a>
 <a href="https://dev.to/shiva_" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
+<a href="mailto:me@shiva.dev" title="Email" rel=" me"><i class="fa-regular fa-envelope fa-fw" aria-hidden="true"></i></a>
 </div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><h1 class="single-title" itemprop="name headline">
         <a href="/posts/lunr_search_for_hugo/">Add Lunr Search to Hugo site</a>
