--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             <a href="/" title="SHIVA.DEV">shiva.dev</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><a class="menu-item" href="https://github.com/SHlVA" title="Visit my github profile" rel="noopener noreffer" target="_blank"><i class='fa-brands fa-github fa-lg' style='margin-right: 5px;'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><a class="menu-item" href="https://github.com/lazydeveloper" title="Visit my github profile" rel="noopener noreffer" target="_blank"><i class='fa-brands fa-github fa-lg' style='margin-right: 5px;'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search www.shiva.dev" id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -80,7 +80,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/tags/" title="">Tags</a><a class="menu-item" href="/categories/" title="">Categories</a><a class="menu-item" href="https://github.com/SHlVA" title="Visit my github profile" rel="noopener noreffer" target="_blank"><i class='fa-brands fa-github fa-lg' style='margin-right: 5px;'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/tags/" title="">Tags</a><a class="menu-item" href="/categories/" title="">Categories</a><a class="menu-item" href="https://github.com/lazydeveloper" title="Visit my github profile" rel="noopener noreffer" target="_blank"><i class='fa-brands fa-github fa-lg' style='margin-right: 5px;'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a></div>
     </div>
@@ -97,7 +97,7 @@
         data-srcset="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 1.5x, https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp 2x"
         data-sizes="auto"
         alt="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp"
-        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/shlva" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-github fa-fw" aria-hidden="true"></i></a>
+        title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-github fa-fw" aria-hidden="true"></i></a>
 <a href="https://x.com/okkaduX" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
 <a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-gitlab" aria-hidden="true"></i></a>
 <a href="https://dev.to/shiva_" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
