--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp" />
-    <title>404 Page not found - SHIVA.DEV</title>
+    <title>404 Page not found - shiva.dev</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js"></script><meta name="Description" content="A tech blog by Shiva Inampudi"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="A tech blog by Shiva Inampudi" />
 <meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
 <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="SHIVA.DEV">shiva.dev</a>
+            <a href="/" title="shiva.dev">shiva.dev</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><a class="menu-item" href="https://github.com/lazydeveloper" title="Visit my github profile" rel="noopener noreffer" target="_blank"><i class='fa-brands fa-github fa-lg' style='margin-right: 5px;'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -47,7 +47,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="SHIVA.DEV">shiva.dev</a>
+                <a href="/" title="shiva.dev">shiva.dev</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
