--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp" />
-    <title>SHIVA.DEV</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js"></script><meta name="Description" content="A tech blog by Shiva Inampudi"><meta property="og:title" content="SHIVA.DEV" />
+    <title>shiva.dev</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js"></script><meta name="Description" content="A tech blog by Shiva Inampudi"><meta property="og:title" content="shiva.dev" />
 <meta property="og:description" content="A tech blog by Shiva Inampudi" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shiva.dev/" /><meta property="og:site_name" content="www.shiva.dev" />
 
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="SHIVA.DEV"/>
+<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="shiva.dev"/>
 <meta name="twitter:description" content="A tech blog by Shiva Inampudi"/>
 <meta name="twitter:site" content="@okkaduX"/>
 <meta name="application-name" content="Shiva&#39;s Tech Blog">
 <meta name="apple-mobile-web-app-title" content="Shiva&#39;s Tech Blog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"><link rel="alternate" href="/index.xml" type="application/rss+xml" title="SHIVA.DEV">
-    <link rel="feed" href="/index.xml" type="application/rss+xml" title="SHIVA.DEV"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"><script type="application/ld+json">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"><link rel="alternate" href="/index.xml" type="application/rss+xml" title="shiva.dev">
+    <link rel="feed" href="/index.xml" type="application/rss+xml" title="shiva.dev"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
         "url": "https:\/\/shiva.dev\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "Shiva"
-            },"description": "A tech blog by Shiva Inampudi","name": "SHIVA.DEV"
+            },"description": "A tech blog by Shiva Inampudi","name": "shiva.dev"
     }
     </script></head>
 <body data-header-desktop="fixed" data-header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
@@ -34,7 +34,7 @@
 <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="SHIVA.DEV">shiva.dev</a>
+            <a href="/" title="shiva.dev">shiva.dev</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><a class="menu-item" href="https://github.com/lazydeveloper" title="Visit my github profile" rel="noopener noreffer" target="_blank"><i class='fa-brands fa-github fa-lg' style='margin-right: 5px;'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -58,7 +58,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="SHIVA.DEV">shiva.dev</a>
+                <a href="/" title="shiva.dev">shiva.dev</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -98,9 +98,10 @@
         data-sizes="auto"
         alt="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp"
         title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-github fa-fw" aria-hidden="true"></i></a>
-<a href="https://x.com/okkaduX" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
 <a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-gitlab" aria-hidden="true"></i></a>
-<a href="https://dev.to/shiva_" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
+<a href="https://hub.docker.com/u/shiva" title="Docker" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-docker fa-fw" aria-hidden="true"></i></a>
+<a href="https://x.com/okkaduX" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
+<a href="https://dev.to/lazydeveloper" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
 <a href="mailto:me@shiva.dev" title="Email" rel=" me"><i class="fa-regular fa-envelope fa-fw" aria-hidden="true"></i></a>
 </div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><h1 class="single-title" itemprop="name headline">
