updated npm social

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="shiva.dev"/>
 <meta name="twitter:description" content="A tech blog by Shiva Inampudi"/>
-<meta name="twitter:site" content="@okkaduX"/>
+<meta name="twitter:site" content="@SHlVA_DEV"/>
 <meta name="application-name" content="Shiva&#39;s Tech Blog">
 <meta name="apple-mobile-web-app-title" content="Shiva&#39;s Tech Blog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -100,7 +100,8 @@
         title="https://www.gravatar.com/avatar/fe790a554d42a68965e6169b658eb9ec?s=240&amp;d=mp" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/lazydeveloper" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-github fa-fw" aria-hidden="true"></i></a>
 <a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-gitlab" aria-hidden="true"></i></a>
 <a href="https://hub.docker.com/u/shiva" title="Docker" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-docker fa-fw" aria-hidden="true"></i></a>
-<a href="https://x.com/okkaduX" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
+<a href="https://www.npmjs.com/~/lazydeveloper" title="NPM" target="_blank" rel="noopener noreffer me"><i class="class=&#34;fa-brands fa-npm" aria-hidden="true"></i></a>
+<a href="https://x.com/SHlVA_DEV" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
 <a href="https://dev.to/lazydeveloper" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
 <a href="mailto:me@shiva.dev" title="Email" rel=" me"><i class="fa-regular fa-envelope fa-fw" aria-hidden="true"></i></a>
 </div></div>
