updated site description on globel

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="shiva.dev">
   <meta name="twitter:description" content="A tech blog by Shiva Inampudi">
-      <meta name="twitter:site" content="@SHlVA_DEV">
+      <meta name="twitter:site" content="@shiva__dev">
 <meta name="application-name" content="Shiva&#39;s Tech Blog">
 <meta name="apple-mobile-web-app-title" content="Shiva&#39;s Tech Blog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -104,9 +104,10 @@
 <a href="https://gitlab.com/okkadu" title="GitLab" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-gitlab" aria-hidden="true"></i></a>
 <a href="https://hub.docker.com/u/shiva" title="Docker" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-docker fa-fw" aria-hidden="true"></i></a>
 <a href="https://www.npmjs.com/~lazydeveloper" title="NPM" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-npm" aria-hidden="true"></i></a>
-<a href="https://x.com/SHlVA_DEV" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
+<a href="https://x.com/shiva__dev" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fa-brands fa-twitter fa-fw" aria-hidden="true"></i></a>
 <a href="https://dev.to/lazydeveloper" title="Dev.To" target="_blank" rel="noopener noreffer me"><i class="fab fa-dev fa-fw" aria-hidden="true"></i></a>
 <a href="mailto:me@shiva.dev" title="Email" rel=" me"><i class="fa-regular fa-envelope fa-fw" aria-hidden="true"></i></a>
+<a href="https://t.me/shiva_dev/shiva_dev" title="Telegram" target="_blank" rel="noopener noreffer me"><i class="fab fa-telegram-plane fa-fw" aria-hidden="true"></i></a>
 </div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><h1 class="single-title" itemprop="name headline">
         <a href="/posts/bind_ctrl_&#43;&#43;hjkl_to_arrow_keys_on_a_mac/">Bind Ctrl &#43; HJKL to arrow keys on a Mac Machine</a>
