--- a/static/app/elr/index.html
+++ b/static/app/elr/index.html
@@ -249,7 +249,7 @@ h1{
 </div>
 
 <script>
-const MAPBOX_ACCESS_TOKEN=window.MAPBOX_ACCESS_TOKEN||"pk.eyJ1IjoibGF6eWRldmVsb3BlciIsImEiOiJjbWthNWQyeDkyMGF2M21vdXZtdHNqNHJhIn0.3gbi1sLzpHP6zgADFNXePg";
+const MAPBOX_ACCESS_TOKEN=window.MAPBOX_ACCESS_TOKEN||"pk.eyJ1IjoibGF6eWRldmVsb3BlciIsImEiOiJjbWtha25hdTkwam51M2huMzcwcDljZ3h4In0.0iQd9v-qytpcfr2WS29_Zg";
 const MAPBOX_SESSION_TOKEN=(crypto.randomUUID?crypto.randomUUID():String(Math.random()).slice(2));
 const MAPBOX_COUNTRY="US";
 const MAPBOX_BBOX="-75.563587,38.788657,-73.88506,41.357423"; // New Jersey bounds
